--- a/requirements.txt
+++ b/requirements.txt
@@ -1,88 +1,54 @@
-annotated-types==0.7.0
-asgiref==3.8.1  
-asttokens==3.0.0
-attrs==24.2.0   
-backcall==0.2.0
-beautifulsoup4==4.12.3
-bleach==6.2.0
+asgiref==3.8.1
+attrs==24.2.0
 cattrs==24.1.2
-certifi==2024.2.2
-charset-normalizer==3.3.2
-click==8.1.7
-cloudpathlib==0.16.0
+certifi==2024.8.30
+charset-normalizer==3.4.0
 colorama==0.4.6
-confection==0.1.4
-contourpy==1.2.1
-cycler==0.12.1
-cymem==2.0.8
-decorator==5.1.1
-defusedxml==0.7.1
-dj-database-url==2.3.0
-Django==5.1.2
-executing==2.1.0
-filelock==3.14.0
+coloredlogs==15.0.1
+Django==5.1.4
+django-crispy-forms==2.3
 flatbuffers==24.3.25
-fonttools==4.51.0
-fsspec==2024.5.0
 gunicorn==23.0.0
-idna==3.7
-imageio==2.36.0
-implicit==0.7.2
-Jinja2==3.1.4
-joblib==1.4.2
+humanfriendly==10.0
+idna==3.10
+imageio==2.36.1
 jsonschema==4.23.0
 jsonschema-specifications==2024.10.1
-kiwisolver==1.4.5
-language_data==1.2.0
 lazy_loader==0.4
-marisa-trie==1.1.1
-MarkupSafe==2.1.5
-mistune==3.0.2
+llvmlite==0.43.0
 mpmath==1.3.0
-murmurhash==1.0.10
-networkx==3.3
-numpy==1.26.4
+networkx==3.4.2
+numba==0.60.0
+numpy==2.0.2
+onnxruntime==1.20.1
+opencv-python-headless==4.10.0.84
 openmeteo_requests==1.3.0
 openmeteo_sdk==1.18.0
-packaging==24.0
-pandas==2.2.2
-pandocfilters==1.5.1
-pickleshare==0.7.5
-pillow==10.3.0
-pipreqs==0.5.0
+packaging==24.2
+pandas==2.2.3
+pillow==11.0.0
 platformdirs==4.3.6
 pooch==1.8.2
-protobuf==5.28.3
+protobuf==5.29.1
 psycopg2-binary==2.9.10
-pure_eval==0.2.3
-pydantic==2.7.1
-pydantic_core==2.18.2
-Pygments==2.18.0
 PyMatting==1.1.13
-pyparsing==3.1.2
+pyreadline3==3.5.4
 python-dateutil==2.9.0.post0
-pytz==2024.1
-PyYAML==6.0.1
-pyzmq==26.2.0
+pytz==2024.2
 referencing==0.35.1
 rembg==2.0.60
-rpds-py==0.21.0
-six==1.16.0
-smart-open==6.4.0
-soupsieve==2.6
-sqlparse==0.5.1
-sympy==1.12
-threadpoolctl==3.5.0
+requests==2.32.3
+requests-cache==1.2.1
+retry-requests==2.0.0
+rpds-py==0.22.3
+scikit-image==0.24.0
+scipy==1.14.1
+six==1.17.0
+sqlparse==0.5.2
+sympy==1.13.3
 tifffile==2024.9.20
-tornado==6.4.2
-tqdm==4.66.4    
-traitlets==5.14.3
-typer==0.9.4
-typing_extensions==4.11.0
-tzdata==2024.1
+tqdm==4.67.1
+tzdata==2024.2
 url-normalize==1.4.3
-urllib3==2.2.1
-wcwidth==0.2.13
-webencodings==0.5.1
+urllib3==2.2.3
 whitenoise==6.8.2
-onnxruntime==1.15.1
