--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,7 +7,7 @@ services:
       - .:/code
       - static_volume:/code/staticfiles
       - media:/code/media
-    # command: ["gunicorn", "fabrik.wsgi:application", "--bind", "0.0.0.0:8000"]
+    command: ["gunicorn", "fabrik.wsgi:application", "--bind", "0.0.0.0:8000"]
     environment:
       - DJANGO_SETTINGS_MODULE=fabrik.settings
 
