--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,9 +7,9 @@ services:
       - .:/code
       - static_volume:/code/staticfiles
       - media:/code/media
-    command: ["gunicorn", "fabrik.wsgi:application", "--bind", "0.0.0.0:8000"]
     environment:
       - DJANGO_SETTINGS_MODULE=fabrik.settings
+      - PORT=8000
 
 volumes:
   static_volume:
